; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_shader_cache.c_gl_sc_uniform_mat3.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_shader_cache.c_gl_sc_uniform_mat3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_shader_cache = type { i32 }
%struct.sc_uniform = type { i8*, %struct.TYPE_3__, %struct.TYPE_4__ }
%struct.TYPE_3__ = type { float* }
%struct.TYPE_4__ = type { i32, i32, i32 }

@RA_VARTYPE_FLOAT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"mat3\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_sc_uniform_mat3(%struct.gl_shader_cache* %0, i8* %1, i32 %2, float* %3) #0 {
  %5 = alloca %struct.gl_shader_cache*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca float*, align 8
  %9 = alloca %struct.sc_uniform*, align 8
  %10 = alloca i32, align 4
  store %struct.gl_shader_cache* %0, %struct.gl_shader_cache** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store float* %3, float** %8, align 8
  %11 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call %struct.sc_uniform* @find_uniform(%struct.gl_shader_cache* %11, i8* %12)
  store %struct.sc_uniform* %13, %struct.sc_uniform** %9, align 8
  %14 = load i32, i32* @RA_VARTYPE_FLOAT, align 4
  %15 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %16 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %15, i32 0, i32 2
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 2
  store i32 %14, i32* %17, align 8
  %18 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %19 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  store i32 3, i32* %20, align 8
  %21 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %22 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %21, i32 0, i32 2
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  store i32 3, i32* %23, align 4
  %24 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %25 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %24, i32 0, i32 0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %25, align 8
  %26 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %5, align 8
  %27 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %28 = call i32 @update_uniform_params(%struct.gl_shader_cache* %26, %struct.sc_uniform* %27)
  store i32 0, i32* %10, align 4
  br label %29

29:                                               ; preds = %45, %4
  %30 = load i32, i32* %10, align 4
  %31 = icmp slt i32 %30, 9
  br i1 %31, label %32, label %48

32:                                               ; preds = %29
  %33 = load float*, float** %8, align 8
  %34 = load i32, i32* %10, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds float, float* %33, i64 %35
  %37 = load float, float* %36, align 4
  %38 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %39 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load float*, float** %40, align 8
  %42 = load i32, i32* %10, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds float, float* %41, i64 %43
  store float %37, float* %44, align 4
  br label %45

45:                                               ; preds = %32
  %46 = load i32, i32* %10, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %10, align 4
  br label %29

48:                                               ; preds = %29
  %49 = load i32, i32* %7, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %58

51:                                               ; preds = %48
  %52 = load %struct.sc_uniform*, %struct.sc_uniform** %9, align 8
  %53 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %52, i32 0, i32 1
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  %55 = load float*, float** %54, align 8
  %56 = getelementptr inbounds float, float* %55, i64 0
  %57 = call i32 @transpose3x3(float* %56)
  br label %58

58:                                               ; preds = %51, %48
  ret void
}

declare dso_local %struct.sc_uniform* @find_uniform(%struct.gl_shader_cache*, i8*) #1

declare dso_local i32 @update_uniform_params(%struct.gl_shader_cache*, %struct.sc_uniform*) #1

declare dso_local i32 @transpose3x3(float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
